@@ -298,6 +298,17 @@ int build(rpmts ts, const char * arg, BTA_t ba, const char * rcfile)
     char * targets = ba->targets;
 #define	buildCleanMask	(RPMBUILD_RMSOURCE|RPMBUILD_RMSPEC)
     int cleanFlags = ba->buildAmount & buildCleanMask;
+    int vsflags, ovsflags;
+
+    vsflags = rpmExpandNumeric("%{_vsflags_build}");
+    if (ba->qva_flags & VERIFY_DIGEST)
+	vsflags |= _RPMTS_VSF_NODIGESTS;
+    if (ba->qva_flags & VERIFY_SIGNATURE)
+	vsflags |= _RPMTS_VSF_NOSIGNATURES;
+    if (ba->qva_flags & VERIFY_HDRCHK)
+	vsflags |= _RPMTS_VSF_NOHDRCHK;
+fprintf(stderr, "*** vsflags 0x%x qva_flags 0x%x\n", vsflags, ba->qva_flags);
+    ovsflags = rpmtsSetVerifySigFlags(ts, vsflags);
 
     if (targets == NULL) {
 	rc =  buildForTarget(ts, arg, ba);
@@ -332,6 +343,7 @@ int build(rpmts ts, const char * arg, BTA_t ba, const char * rcfile)
     }
 
 exit:
+    vsflags = rpmtsSetVerifySigFlags(ts, ovsflags);
     /* Restore original configuration. */
     rpmFreeMacros(NULL);
     (void) rpmReadConfigFiles(rcfile, NULL);
